# python-fzf

./: pyproject.toml
fzf/: __init__.py  app.py
