[tool.poetry]
name = "python-fzf"
version = "0.0.0"
description = "Python wrapper for fzf."
authors = ["samedamci <samedamci@disroot.org>"]
license = "ISC"
packages = [{ include = "fzf" }]
homepage = "https://github.com/samedamci/python-fzf"
repository = "https://github.com/samedamci/python-fzf"
keywords = ["fzf", "wrapper"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: ISC License (ISCL)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
  "Topic :: Utilities",
  "Topic :: Software Development :: Version Control",
]

[tool.poetry.dependencies]
python = "^3.9.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
black = "^21.8b0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
format = "{base}"

[tool.black]
target-version = ["py39"]
skip-magic-trailing-comma = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
